apps/panopticode/mongo/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: panopticode
spec:
  selector:
    app: mongo
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
    - name: mongo-express
      protocol: TCP
      port: 8081
      targetPort: 8081
