apps/panopticode/mongo/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: panopticode
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "mongo-express.k8s.jeromeswannack.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo
            port:
              number: 8081
